--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 
 <body>
@@ -16,11 +18,18 @@
 
         <header class="menu_bar shadow">
             <nav class="menu_nav">
-                <ul>
+                <ul class="menu_nav_links">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Portfolio</a></li>
                     <li><a href="#">Blog</a></li>
                     <li><a href="#">Contact</a></li>
+                </ul>
+                <ul class="menu_nav_icons">
+                    <li><a href="#"><i class="fa fa-home" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-picture-o" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i></a></li>
+                    <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
                 </ul>
             </nav>
 
